# word-histogram

./: CMakeLists.txt  README.md  filewordcounter.cpp  filewordcounter.h  filewordcounterworker.cpp  filewordcounterworker.h  main.cpp  topwordstorage.cpp  topwordstorage.h  uniquepriorityqueue.cpp  uniquepriorityqueue.h  wordcount.h  wordfrequencymodel.cpp  wordfrequencymodel.h
qml/: Button.qml  Histogram.qml  HistogramBar.qml  Main.qml  ProgressBar.qml
